Added Project Images

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Isaiah Joshua
-#logo: /assets/img/headshot_circle.png
+logo: /Images/IMG_8400.jpeg
 #description: text below image
 #show_downloads: true
 theme: minima
