--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Isaiah Joshua
 logo: /Images/IMG_8400.jpeg
 #description: text below image
 #show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll_theme_minimal
